--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@redux-saga/symbols": "^1.1.3",
     "@redux-saga/types": "^1.2.1",
     "redux": "^4.0.4",
+    "symbol-observable": "^4.0.0",
     "typescript-tuple": "^2.2.1"
   },
   "devDependencies": {
